# skillberry-praxis-filters

./: .gitignore  Cargo.toml  README.md
docs/: tau2-praxis-run.md
pipeline/: skillberry-agent-proxy.yaml.tmpl  skillberry.yaml
scripts/: start.sh
src/: lib.rs
src/context_extractor/: config.rs  filter.rs  mod.rs  tests.rs
src/mcp_tools_enricher/: config.rs  mod.rs  tests.rs
src/skill_resolver/: config.rs  filter.rs  mod.rs  tests.rs
src/vmcp_manager/: config.rs  filter.rs  mod.rs  tests.rs
worker/: README.md  main.py  pyproject.toml
