[package]
name = "skillberry-praxis-filters"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
authors = ["Skillberry Contributors"]
description = "Praxis external filters for the Skillberry ecosystem"
license = "MIT"

[package.metadata.praxis-filters]

[dependencies]
praxis_filter = { package = "praxis-proxy-filter", git = "https://github.com/praxis-proxy/praxis.git" }
async-trait = "0.1.89"
bytes = "1.12.0"
http = "1"
mcp-client = "0.1"
mcp-spec = "0.1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Use the same serde_yaml alias as upstream praxis-proxy-filter to ensure type
# compatibility: both this crate and the filter API must resolve to the same
# serde_yaml::Value type.
serde_yaml = { package = "yaml_serde", version = "0.10" }
tokio = { version = "1", features = ["macros", "rt"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
